2007-08-16  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/whirlpinch.c: applied patch from Aurimas Juška to
	fix bug #467368.

2007-08-16  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/polar.c: applied patch from Aurimas Juška to fix
	bug #467369.

2007-08-16  Raphaël Quinet  <raphael@gimp.org>

	* README: updated Mailing Lists section.

2007-08-16  Sven Neumann  <sven@gimp.org>

	* Made 2.4.0-rc1 release, a release candidate for GIMP 2.4.0.

2007-08-15  Sven Neumann  <sven@gimp.org>

	* configure.in: bumped the version to 2.4.0-rc1.

	* README
	* INSTALL: updated for the GIMP 2.4 release candidate(s).

	* data/images/gimp-splash.png: added splash screen for the 2.4
	release candidate(s).

	* app/Makefile.am
	* tools/Makefile.am: adjust targets for 2.4.

2007-08-15  Sven Neumann  <sven@gimp.org>

	* data/images: renamed old splash and logo images.

2007-08-15  Øyvind Kolås  <pippin@gimp.org>

	Improve resampling when zooming out of the image for zoom-ratios that
	are not powers of two.

	* app/display/gimpdisplayshell-render.c: added a bilinear filtering
	like weighting of neighbourhood pixels for approximating the
	downsampling from the next larger level in the projection mipmap.
	Also some general code cleanup. Closes bug #76096.

2007-08-15  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print.c (end_print): added a timeout as a
	workaround for bug #466928.

2007-08-15  Michael Natterer  <mitch@gimp.org>

	* app/core/core-types.h: remove GimpPlugInDebug typedef.

	* app/plug-in/plug-in-types.h: added it here instead.

	* app/core/gimpchannel-combine.h
	* app/widgets/gimppropwidgets.[ch]: match parameter names
	in .c, .h and API docs to make gtk-doc happy.

2007-08-15  Joao S. O. Bueno Calligaris <gwidion@mpc.com.br>

        * plug-ins/pygimp/pygimp-drawable.c: avoids function call
	with an invalid drawable id
	
2007-08-15  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print-page-layout.c: applied patch from Stefan