@@ -468,11 +468,6 @@ gimp_perspective_clone_tool_motion (GimpTool        *tool,
 
       gimp_draw_tool_pause (GIMP_DRAW_TOOL (tool));
 
-      if ((state & (GDK_CONTROL_MASK | GDK_SHIFT_MASK)) == GDK_CONTROL_MASK)
-        source_core->set_source = TRUE;
-      else
-        source_core->set_source = FALSE;
-
       GIMP_TOOL_CLASS (parent_class)->motion (tool, coords, time, state,
                                               display);
 
